# learning-rust

./: .gitignore  README.md
hello-world/: main.rs
hello-world/handle-errors/src/: main.rs
hello-world/hello-cargo/src/: main.rs  my_arrays.rs
hello-world/my-arrays/: Cargo.toml
hello-world/my-arrays/src/: main.rs
hello-world/my-hash-map/: Cargo.toml
hello-world/my-hash-map/src/: main.rs
hello-world/my-traits/: Cargo.toml
hello-world/my-traits/src/: main.rs
rusty-journal/: Cargo.toml  README.md
rusty-journal/src/: cli.rs  main.rs  tasks.rs
