[package]
name = "rusty-journal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde_json = "1.0"
home = "0.5" # get home directory across different OSs
anyhow = "1.0" # pretty-print errors

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]  # Used to serialize DateTime field
